--- a/src/complete/ex5-viewmodel-composition/Ex5/MainWindow.xaml
+++ b/src/complete/ex5-viewmodel-composition/Ex5/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Ex5.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:xaml="clr-namespace:ReactiveUI.Xaml;assembly=ReactiveUI.Xaml"
+        xmlns:reactiveUi="clr-namespace:ReactiveUI;assembly=ReactiveUI"
         Title="The World's Worst User Interface" Height="350" Width="525">
     <Window.Resources>
         <Style TargetType="TextBlock">
@@ -15,7 +15,7 @@
         </Style>
     </Window.Resources>
     <StackPanel>
-        <xaml:ViewModelViewHost x:Name="TitleBarHost" /> 
+        <reactiveUi:ViewModelViewHost x:Name="TitleBarHost" /> 
 
         <Grid>
             <Grid.ColumnDefinitions>
