--- a/src/exercises/ex5-viewmodel-composition/Ex5/ControlStyles.ReactiveUI.xaml
+++ b/src/exercises/ex5-viewmodel-composition/Ex5/ControlStyles.ReactiveUI.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:xaml="clr-namespace:ReactiveUI.Xaml;assembly=ReactiveUI.Xaml">
-    <Style TargetType="xaml:ViewModelViewHost">
+                    xmlns:reactiveUi="clr-namespace:ReactiveUI;assembly=ReactiveUI">
+    <Style TargetType="reactiveUi:ViewModelViewHost">
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
         <Setter Property="VerticalContentAlignment" Value="Stretch" />
     </Style>
