--- a/src/exercises/ex8-routing/Ex8/MainWindowView.xaml
+++ b/src/exercises/ex8-routing/Ex8/MainWindowView.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Ex8.MainWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:xaml="clr-namespace:ReactiveUI.Xaml;assembly=ReactiveUI.Xaml"
+        xmlns:reactiveUi="clr-namespace:ReactiveUI;assembly=ReactiveUI"
         Title="Investigating the Navigation Stack..." Height="525" Width="525" Background="LightGray">
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
@@ -16,12 +16,12 @@
             there's a new view created each time. In other words, stateful VIEWS are
             a Bad Plan.
         </TextBlock>
-        <xaml:RoutedViewHost x:Name="ViewHost" Margin="30">
-            <xaml:RoutedViewHost.DefaultContent>
+        <reactiveUi:RoutedViewHost x:Name="ViewHost" Margin="30">
+            <reactiveUi:RoutedViewHost.DefaultContent>
                 <Border Background="Black">
                     <TextBlock Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">Nothing to see here...</TextBlock>
                 </Border>
-            </xaml:RoutedViewHost.DefaultContent>
-        </xaml:RoutedViewHost>
+            </reactiveUi:RoutedViewHost.DefaultContent>
+        </reactiveUi:RoutedViewHost>
     </DockPanel>
 </Window>
